# rust_data_reader

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bool_test.txt  char_test.txt  float_testv1.txt  int_testv2.txt  int_testv2_sci.txt  int_testv3.txt  int_testv4.txt
benches/: examples.rs
src/: lib.rs  reader.rs
src/reader/: float_reader.rs  int_reader.rs  macro_src.rs  mod.rs  parser.rs  parser_core.rs  parser_mem.rs  parser_new.rs  parser_utility.rs  prim_reader.rs  reader_results.rs  uint_reader.rs
tests/: test.rs
