[package]
name = "data_reader"
version = "0.4.0"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
publish = false

repository = "https://github.com/rcarson3/rust_data_reader/"

description = "A data loading library for data scientist."

keywords = ["data-reader"]
categories = ["data-structures", "science"]

exclude = [
    "*.txt",
    "/tests/*",
    "/benches/*",
]

[dependencies] 
bytecount = "0.6.2"
failure = "0.1.5"
memchr = "2.4.0"
lexical = "5.2.2"
fast-float = "0.2"
memmap = { package = "memmap2", version = "0.3.0", optional = true }

[features]

mmap = ["memmap"]

[dev-dependencies]
criterion = "0.3.4"
[[bench]]
name = "examples"
path = "benches/examples.rs"
harness = false
[profile.release]
opt-level = 3
debug = false
# rpath = false
# lto = 'fat'
# debug-assertions = false
codegen-units = 1
# panic = 'unwind'
# incremental = false
# overflow-checks = false
# [profile.dev]
# opt-level = 3
# debug = false
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 16
# panic = 'unwind'
# incremental = false
# overflow-checks = false
[profile.bench]
opt-level = 3
debug = false
# # rpath = false
lto = 'thin'
#debug-assertions = false
codegen-units = 1
# panic = 'abort'
incremental = false
#overflow-checks = false
# [profile.test]
# opt-level = 3
# debug = false
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 16
# panic = 'unwind'
# incremental = false
# overflow-checks = false
