[package]
name = "data_reader"
version = "0.5.0"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
publish = false

repository = "https://github.com/rcarson3/rust_data_reader/"

description = "A data loading library for data scientist."

keywords = ["data-reader"]
categories = ["data-structures", "science"]

exclude = [
    "*.txt",
    "/tests/*",
    "/benches/*",
]

[dependencies] 
bytecount = "0.6.3"
anyhow = "1.0"
memchr = "2.5.0"
lexical = "6.1.1"
memmap = { package = "memmap2", version = "0.5.5", optional = true }

[features]

mmap = ["memmap"]

[dev-dependencies]
criterion = "0.3.6"
[[bench]]
name = "examples"
path = "benches/examples.rs"
harness = false
[profile.release]
opt-level = 3
debug = false
# rpath = false
# lto = 'fat'
# debug-assertions = false
codegen-units = 1
# panic = 'unwind'
# incremental = false
# overflow-checks = false
# [profile.dev]
# opt-level = 3
# debug = false
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 16
# panic = 'unwind'
# incremental = false
# overflow-checks = false
[profile.bench]
opt-level = 3
debug = false
# # rpath = false
lto = 'fat'
#debug-assertions = false
codegen-units = 1
# panic = 'abort'
incremental = false
#overflow-checks = false
# [profile.test]
# opt-level = 3
# debug = false
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 16
# panic = 'unwind'
# incremental = false
# overflow-checks = false
